[package]
name = "quantumproof-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-dilithium = "0.4"
pqcrypto-traits = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sled = "0.34"
tokio = { version = "1", features = ["full"] }

